# homomorphic-encryption-key-exchange

./: .gitignore
article/: abstract.tex  conclusion.tex  fedcsis.bib  fedcsis.tex  introduction.tex  key_exchange.tex  mitm.tex  notation.tex  performance.tex  performance_table.tex  toy.tex
docs/: cpuinfo.txt  log1.csv  log2.csv
scripts/: sentDataSize.py
src/: .together.txt.swp  CMakeLists.txt  GeneratedData.cpp  GeneratedData.hpp  Matrix.cpp  Matrix.hpp  Number.cpp  Number.hpp  Session.cpp  Session.hpp  TestingSuite.cpp  TestingSuite.hpp  User.cpp  User.hpp  Vector.cpp  Vector.hpp  divided.txt  main.cpp  test.sh  together.txt
